<?xml version="1.0"?>
<package format="2">
  <name>advanced_experiment</name>
  <version>0.0.0</version>
  <description>Package for Advanced Experiment, IST, APU, Japan</description>

  <maintainer email="takuo.suzuki@ist.aichi-pu.ac.jp">SUZUKI Takuo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>mouse_teleop</exec_depend>

  <export></export>
</package>
